--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.5.0",
     "react-bootstrap": "^1.3.0",
     "axios": "^0.19.2",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "dot-prop": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
